refactor: 기본으로 제공된 Lotto 클래스와 LottoTest 클래스 리팩토링
- 자료구조를 List에서 Set으로 변경한다.
- 예외 메시지를 추가한다.
- 테스트 케이스를 추가한다.